2004-03-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:

	Middle-click on tray icon toggles window visibility.

2004-03-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:

	Remove accels from Play buttons, fixing #137106.
	
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Clicking the WM close button hides the window.

2004-03-12  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	* libmuine/mm-keys.c: (mmkeys_get_type), (mmkeys_class_init),
	(mmkeys_finalize), (mmkeys_init), (mmkeys_new), (grab_mmkey),
	(filter_mmkeys):
	* libmuine/mm-keys.h:
	* src/Makefile.am:
	* src/MmKeys.cs:
	* src/PlaylistWindow.cs:

	Grab multimedia keys globally.

2004-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added Norwegian to ALL_LINGUAS.

2004-03-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix prev button behaviour.

2004-03-06  Jorn Baayen  <jbaayen@gnome.org>

	* src/KeyUtils.cs:

	Add more modifier keys.

2004-02-29  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Add an album cover dnd tooltip.

2004-02-29  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	A libmuine/gtk-glue.c: (gtk_glue_get_monitor_dimensions):
	A libmuine/gtk-glue.h:
	* libmuine/markup-utils.c:
	* src/NotificationAreaIcon.cs:

	Fix tray icon popup positioning.

2004-02-27  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.5.0.99.

2004-02-27  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Re-enable info window now that we have the release.
	
	Update TODO with information about the window parenting bug.

2004-02-27  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/CoverDatabase.cs:
	* src/CoverImage.cs:
	* src/StockIcons.cs:

	Cleanup cover image dimension stuff some more.
