@@ -14,3 +14,8 @@ EXTRA_DIST =			\
 	intltool-update.in	\
 	muine.spec.in		\
 	muine.spec
+
+DISTCLEANFILES = 		\
+	intltool-extract 	\
+	intltool-merge 		\
+	intltool-update
